[package]
name = "json_parser"
version = "1.0.1"
edition = "2021"
description = "My own json parser using rust + pest for learning purpose."
authors = ["Bahriantsev Ivan"]

[dependencies]
anyhow = "1.0"
pest = "2.7.5"
pest_derive = "2.7.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.3"
